--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,8 @@ body {
     font-size: 16px;
     font-weight: lighter;
     text-decoration: none;
-    background-color: rgba(159, 18, 18, 0.755);
+    background-color: rgb(206, 183, 148);
+    color: black;
 }
 
 
@@ -54,14 +55,13 @@ header h1 {
 
 /****** MAIN INDEX ******/
 section {
-    background-color: rgba(159, 18, 18, 0.755);
+    color: black;
 }
 .portada {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: antiquewhite;
 }
 .portada h3 {
     text-align: center;
@@ -84,7 +84,7 @@ section {
 .video iframe {
     height: 450px;
     width: 75%;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .imagenes {
     display: flex;
@@ -97,7 +97,7 @@ section {
     height: 450px;
     width: 50%;
     padding: 10px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 /****** NOSOTROS ******/
@@ -106,7 +106,6 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: antiquewhite;
 }
 .Nosotros h3 {
     margin-bottom: 10px;
@@ -128,7 +127,6 @@ section {
     display:flex;
     align-items: flex-start;
     width: 100%;
-    color: antiquewhite;
 }
 .cabaña1 p {
     width: 50%;
@@ -144,7 +142,6 @@ section {
     align-items: flex-start;
     flex-wrap: wrap;
     width: 100%;
-    color: antiquewhite;
 }
 .cabaña2 p{
     width: 50%;
@@ -185,7 +182,7 @@ aside {
     height: 100%;
  }
  .asideContacto img {
-    width: 200px;
+    width: 250px;
     height: 100%;
  }
 footer {
