--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,7 +84,7 @@ section {
 .video iframe {
     height: 450px;
     width: 75%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .imagenes {
     display: flex;
@@ -97,7 +97,7 @@ section {
     height: 450px;
     width: 50%;
     padding: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 /****** NOSOTROS ******/
@@ -113,6 +113,7 @@ section {
 
 }
 .Nosotros p {
+    text-align: center;
     margin-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -122,10 +123,12 @@ section {
     height: 750px;
     padding-left: 10px;
     padding-right: 10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .cabaña1 {
     display:flex;
-    align-items: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
     width: 100%;
 }
 .cabaña1 p {
@@ -135,11 +138,12 @@ section {
 .cabaña1 img {
     padding: 10px;
     width: 50%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .cabaña2 {
     display:flex;
     flex-direction: row-reverse;
-    align-items: flex-start;
+    align-items: center;
     flex-wrap: wrap;
     width: 100%;
 }
@@ -150,6 +154,7 @@ section {
 .cabaña2 img {
     padding: 10px;
     width: 50%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 
@@ -181,9 +186,10 @@ aside {
     width: 100%;
     height: 100%;
  }
- .asideContacto img {
+ .asideImage {
     width: 250px;
-    height: 100%;
+    height: 200px;
+    padding: 5px;
  }
 footer {
     grid-area: footer;
