--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,7 @@ body {
     font-size: 16px;
     font-weight: lighter;
     text-decoration: none;
+    list-style-type: none;
     background-color: rgb(206, 183, 148);
     color: black;
 }
@@ -35,7 +36,6 @@ header h1 {
 }
 .enlaces {
     display:flex;
-    list-style: none;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -166,6 +166,8 @@ section {
     "seccion1 seccion1  aside"
     "seccion2 seccion2  aside"
     "footer   footer    footer";
+    max-height: 100%;
+    grid-template-columns: 70% 1fr 1fr;
  }
 header {
     grid-area: header;
@@ -176,6 +178,14 @@ header {
  #seccion2 {
     grid-area: seccion2;
  }
+ .llegar {
+    display:flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    width: 100%;
+        
+ }
+ .llegar
 aside {
     grid-area: aside;
  }
@@ -184,19 +194,17 @@ aside {
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
-    height: 100%;
  }
  .asideImage {
     width: 250px;
     height: 200px;
-    padding: 5px;
+    padding: 5px 0px;
+    margin-right: 5px;
  }
 footer {
     grid-area: footer;
  }
  
-
-
 
 /**** ACTIVIDADES ****/
 
