--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,8 +99,6 @@ section {
     padding: 10px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-
-/****** NOSOTROS ******/
 .Nosotros {
     display:flex;
     justify-content: center;
@@ -110,7 +108,6 @@ section {
 .Nosotros h3 {
     margin-bottom: 10px;
     margin-top: 10px;
-
 }
 .Nosotros p {
     text-align: center;
@@ -123,7 +120,6 @@ section {
     height: 750px;
     padding-left: 10px;
     padding-right: 10px;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .cabaña1 {
     display:flex;
@@ -174,7 +170,6 @@ section {
  }
  #seccion1 {
     grid-area: seccion1;
-    height: 500px;
  }
  #seccion2 {
     grid-area: seccion2;
@@ -205,7 +200,44 @@ section {
  }
  
 
-/**** ACTIVIDADES ****/
+/**** HABITACIONES****/
+.Habitaciones {
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+.Habitaciones h2 {
+    line-height: 1.5em;
+    font-size: 3em;
+}
+.Habitaciones p {
+    line-height: 1.5em;
+    font-size: 1.5em;
+}
+.suite {
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+.suiteMatrimonial{
+    display:flex;
+    align-items: start;
+    flex-direction: row-reverse;
+    border: 3px solid rgba(220, 20, 60, 0.522);
+}
+.suiteInfo {
+    padding: 45px;
+    margin-top: 30px;
+}
+.suiteInfo h2 {
+    border-bottom: 1px solid black;
+    margin-bottom: 15px;
+}
+.suiteInfo p {
+    margin-bottom: 25px;
+}
 
 
 /**** UBICACION ****/
