--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,467 +1,465 @@
+@charset "UTF-8";
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-body {
-    font-family: 'Roboto Slab', serif;
-    font-size: 16px;
-    font-weight: lighter;
-    text-decoration: none;
-    list-style-type: none;
-    background-color: rgb(255, 218, 172);
-    color: black;
-}
-
 
 /*** HEADER ***/
 header {
-    background-color: grey;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: grey;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.barraNavegacion {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+header .barraNavegacion {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
-.barraNavegacion img {
-    width: 100px;
+header .barraNavegacion img {
+  width: 100px;
 }
-header h1 {
-    font-size: 45px;
-    color: antiquewhite;
+header .barraNavegacion h1 {
+  font-size: 45px;
+  color: antiquewhite;
 }
-.enlaces {
-    display:flex;
-    flex-wrap: wrap;
-    align-items: center;
+header .enlaces {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
-.enlaces li {
-    display:flex;
-    margin: 0 20px;
-    font-weight: 700;
+header .enlaces li {
+  display: flex;
+  margin: 0 20px;
+  font-weight: 700;
 }
-.enlaces a {
-    text-decoration: none;
-    color: antiquewhite;
+header .enlaces li a {
+  text-decoration: none;
+  color: antiquewhite;
 }
-.enlaces a:hover {
-    color: brown
-}
-
-
-/****** MAIN INDEX ******/
-section {
-    color: black;
-}
-.portada {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.portada h3 {
-    text-align: center;
-    padding: 5px;
-}
-.Mox {
-    text-align: center;
-}
-.portada p {
-    padding: 5px;
-}
-.video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 15px;
-}
-.video iframe {
-    height: 450px;
-    width: 75%;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-.imagenes {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-}
-.tafi {
-    height: 450px;
-    width: 50%;
-    padding: 10px;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-.Nosotros {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.Nosotros h3 {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-.Nosotros p {
-    text-align: center;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.Nosotros img{
-    width: 97%;
-    height: 750px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.cabaña1 {
-    display:flex;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-}
-.cabaña1 p {
-    width: 50%;
-    padding: 10px;
-}
-.cabaña1 img {
-    padding: 10px;
-    width: 50%;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-.cabaña2 {
-    display:flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
-}
-.cabaña2 p{
-    width: 50%;
-    padding: 10px;
-}
-.cabaña2 img {
-    padding: 10px;
-    width: 50%;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+header .enlaces li a:hover {
+  color: brown;
 }
 
-
-/**** CONTACTO ****/
- #gridContanto {
-    display: grid;
-    grid-template-columns: auto auto auto; /* Tres columnas igualmente distribuidas */
-    grid-template-areas: 
-        "header   header    header"
-        "seccion1 seccion1  aside"
-        "seccion2 seccion2  aside"
-        "footer   footer    footer";
-    min-height: 100vh;
- }
-.mainContact{
-     display: grid;
-     grid-template-areas:
-         "seccion1 seccion1 seccion1"
-         "seccion2 seccion2 seccion2";
-     grid-template-columns: 1fr 1fr;
-     grid-template-rows: auto;
-     grid-gap: 20px;
-     padding: 60px;
- }
- header {
-    grid-area: header;
- }
- #seccion1 {
-    grid-area: seccion1;
- }
- #seccion2 {
-    grid-area: seccion2;
- }
- .llegar {
-    display:flex;
-    align-items: center;
-    flex-direction: row-reverse;
-    justify-content: center;
-    width: 100%;
- }
-.llegar iframe{
-    margin: 0 65px;
-    border-radius: 10px;
+body {
+  font-family: "Roboto Slab", serif;
+  font-size: 16px;
+  font-weight: lighter;
+  text-decoration: none;
+  list-style-type: none;
+  background-color: rgb(255, 218, 172);
+  color: black;
 }
 
-#comoLlegar{
-    margin-top: 15px;
-}
- .estamos{
-    width: 70%;
- }
- .aside {
-    grid-area: aside;
- }
- .asideContacto {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 100%;
- }
- .asideImage {
-    width: 250px;
-    height: 200px;
-    padding: 5px 0px;
-    margin-right: 5px;
- }
- footer {
-    grid-area: footer;
- }
- 
-
-/**** HABITACIONES****/
-.Habitaciones {
-    display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 10px;
-}
-.Habitaciones h2 {
-    line-height: 1.5em;
-    font-size: 2.5em;
-}
-.Habitaciones p {
-    line-height: 1.3em;
-    font-size: 1.3em;
-}
-.suite {
-    display:flex;
-    flex-wrap: wrap;
-    margin: 20px;
-}
-.suiteMatrimonial{
-    display:flex;
-    align-items: start;
-    flex-direction: row-reverse;
-    width: 100%;
-    padding-bottom: 25px;
-}
-.suiteMatrimonial img {
-    width: 50%;
-}
-.suiteInfo {
-    padding: 45px;
-    margin-top: 50px;
-    width: 50%;
-}
-.suiteInfo h4 {
-    font-size: 1.5em;
-    border-bottom: 1px solid black;
-    margin-bottom: 15px;
-}
-.suiteInfo p {
-    margin-bottom: 25px;
-}
-.suiteInfo a {
-    font-weight: 900;
-    text-decoration: none;
-    list-style: none;
-    color: brown;
-}
-.atardecer {
-    height: 450px;
-    width: 800px;
-}
-.NOTA {
-    border: 5px solid darkred;
-    font-weight: bolder;
-    margin-top: 35px;
-}
-.tituloServicio {
-    line-height: 1.5em;
-    font-size: 2.5em;
-    text-align: center;
-    border-bottom: 1px solid gray;
-    padding-bottom: 10px;
-}
-.servicios {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.serviciosIncluidos {
-    display:flex;
-    flex-direction: column;
-    list-style: square;
-    margin-bottom: 10px;
-}
-.serviciosIncluidos p {
-    font-weight: bolder;
-}
-
-
-
-/**** UBICACION ****/
-
-
-/**** FOOTER ****/
 footer {
-    background-color: black;
-    color: antiquewhite;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 25px 0;
+  background-color: black;
+  color: antiquewhite;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 25px 0;
 }
-.footer__info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+footer .footer__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.footer__info__link {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    justify-content: space-evenly;
-    width: 100%;
-    margin: 10px;
+footer .footer__info ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  justify-content: space-evenly;
+  width: 100%;
+  margin: 10px;
 }
-.footer__info img {
-    width: 50px;
+footer .footer__info ul li img {
+  width: 50px;
 }
 
- /****INDEX TABLET ****/
+/****INDEX TABLET ****/
 @media (max-width: 768px) {
-    .imagenes {
-        flex-direction: column;
-        align-items: center;
-    }
-    .tafi {
-        height: 400px;
-        width: 90%;
-    }
-    .cabaña1 {
-        flex-direction: column;
-        align-items: center;
-    }
-    .cabaña1 img {
-        height: 400px;
-        width: 90%;
-    }
-    .cabaña1 p {
-        width: 90%;
-    }
-    .cabaña2 {
-        flex-direction: column;
-        align-items: center;
-    }
-    .cabaña2 img {
-        height: 400px;
-        width: 90%;
-    }
-    .cabaña2 p {
-        width: 90%;
-    }
-    .Nosotros img {
-        object-fit: cover;
-    }
+  .imagenes {
+    flex-direction: column;
+    align-items: center;
+  }
+  .imagenes img {
+    height: 400px;
+    width: 90%;
+  }
+  .cabaña1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cabaña1 img {
+    height: 400px;
+    width: 90%;
+  }
+  .cabaña1 p {
+    width: 90%;
+  }
+  .cabaña2 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cabaña2 img {
+    height: 400px;
+    width: 90%;
+  }
+  .cabaña2 p {
+    width: 90%;
+  }
+  .Nosotros img {
+    object-fit: cover;
+  }
 }
 /**** INDEX MOBILE ****/
 @media screen and (max-width: 480px) {
-    .imagenes {
-        flex-direction: column;
-        align-items: center;
-    }
-    .tafi {
-        height: 300px;
-        width: 90%;
-    }
-    .video iframe {
-        width: 90%;
-    }
-    .Nosotros img {
-        height: 500px;
-    }
-    .cabaña1 {
-        flex-direction: column;
-        align-items: center;
-    }
-    .cabaña1 img {
-        height: 300px;
-        width: 90%;
-    }
-    .cabaña1 p {
-        width: 90%;
-    }
-    .cabaña2 {
-        flex-direction: column;
-        align-items: center;
-    }
-    .cabaña2 img {
-        height: 300px;
-        width: 90%;
-    }
-    .cabaña2 p {
-        width: 90%;
-    }
-    .Nosotros img {
-        object-fit: cover;
-    }
-    .footer {
-        flex-direction: column;
-    }
-    
+  .imagenes {
+    flex-direction: column;
+    align-items: center;
+  }
+  .imagenes img {
+    height: 300px;
+    width: 90%;
+  }
+  .video iframe {
+    width: 90%;
+  }
+  .Nosotros img {
+    height: 500px;
+  }
+  .Nosotros img {
+    object-fit: cover;
+  }
+  .cabaña1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cabaña1 img {
+    height: 300px;
+    width: 90%;
+  }
+  .cabaña1 p {
+    width: 90%;
+  }
+  .cabaña2 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cabaña2 img {
+    height: 300px;
+    width: 90%;
+  }
+  .cabaña2 p {
+    width: 90%;
+  }
+  .footer {
+    flex-direction: column;
+  }
 }
 /****HABITACIONES TABLET****/
 @media screen and (max-width: 768px) {
-    .suiteMatrimonial {
-        flex-direction: column;
-        align-items: center;
-    }
-    .suiteMatrimonial img {
-        height: 450px;
-        width: 85%;
-        border-bottom: 10px solid darkred;
-    }
-    .suiteInfo {
-        padding-left: 60px;
-        padding-bottom: 20px;
-        padding-right: 60px;
-        padding-top: 0px;
-        width: 90%;
-    }
-    .servicios {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+  .suiteMatrimonial {
+    flex-direction: column;
+    align-items: center;
+  }
+  .suiteMatrimonial img {
+    height: 450px;
+    width: 85%;
+    border-bottom: 10px solid darkred;
+  }
+  .suiteInfo {
+    padding-left: 60px;
+    padding-bottom: 20px;
+    padding-right: 60px;
+    padding-top: 0px;
+    width: 90%;
+  }
+  .servicios {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 /**** HABITACIONES MOBILE ****/
 @media screen and (max-width: 480px) {
-    .suiteMatrimonial {
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 0px;
-    }
-    .suiteMatrimonial img {
-        height: 350px;
-        width: 100%;
-        border-bottom: 10px solid darkred;
-    }
-    .suiteInfo {
-        flex-direction: column;
-        padding-left: 60px;
-        padding-bottom: 60px;
-        padding-right: 60px;
-        padding-top: 0px;
-        width: 90%;
-    }
-    .NOTA {
-        margin-top: 30px;
-    }
-    
+  .suiteMatrimonial {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 0px;
+  }
+  .suiteMatrimonial img {
+    height: 350px;
+    width: 100%;
+    border-bottom: 10px solid darkred;
+  }
+  .suiteInfo {
+    flex-direction: column;
+    padding-left: 60px;
+    padding-bottom: 60px;
+    padding-right: 60px;
+    padding-top: 0px;
+    width: 90%;
+  }
+  .NOTA {
+    margin-top: 30px;
+  }
+}
+.portada {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.portada h3 {
+  text-align: center;
+  padding: 5px;
+}
+.portada .Mox {
+  text-align: center;
+}
+.portada p {
+  padding: 5px;
 }
 
+.imagenes {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+}
+.imagenes img {
+  height: 450px;
+  width: 50%;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+}
+.video iframe {
+  height: 450px;
+  width: 75%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.Nosotros {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.Nosotros h3 {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.Nosotros p {
+  text-align: center;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.Nosotros img {
+  width: 97%;
+  height: 750px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.cabaña1 {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  width: 100%;
+}
+.cabaña1 p {
+  flex-direction: column;
+  width: 50%;
+  padding: 10px;
+}
+.cabaña1 img {
+  padding: 10px;
+  width: 50%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.cabaña2 {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.cabaña2 p {
+  width: 50%;
+  padding: 10px;
+}
+.cabaña2 img {
+  padding: 10px;
+  width: 50%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.Habitaciones {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+.Habitaciones h2 {
+  line-height: 1.5em;
+  font-size: 2.5em;
+}
+.Habitaciones p {
+  line-height: 1.3em;
+  font-size: 1.3em;
+}
+
+.suite {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+.suite .suiteMatrimonial {
+  display: flex;
+  align-items: start;
+  flex-direction: row-reverse;
+  width: 100%;
+  padding-bottom: 25px;
+}
+.suite .suiteMatrimonial img {
+  width: 50%;
+}
+.suite .atardecer {
+  height: 450px;
+  width: 800px;
+}
+.suite .suiteInfo {
+  padding: 45px;
+  margin-top: 50px;
+  width: 50%;
+}
+.suite .suiteInfo h4 {
+  font-size: 1.5em;
+  border-bottom: 1px solid black;
+  margin-bottom: 15px;
+}
+.suite .suiteInfo p {
+  margin-bottom: 25px;
+}
+.suite .suiteInfo a {
+  font-weight: 900;
+  text-decoration: none;
+  list-style: none;
+  color: brown;
+}
+
+.NOTA {
+  border: 5px solid darkred;
+  font-weight: bolder;
+  margin-top: 35px;
+}
+
+.tituloServicio {
+  line-height: 1.5em;
+  font-size: 2.5em;
+  text-align: center;
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+}
+
+.servicios {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.servicios .serviciosIncluidos {
+  display: flex;
+  flex-direction: column;
+  list-style: square;
+  margin-bottom: 10px;
+}
+.servicios .serviciosIncluidos p {
+  font-weight: bolder;
+}
+
+#gridContanto {
+  display: grid;
+  grid-template-columns: auto auto auto; /* Tres columnas igualmente distribuidas */
+  grid-template-areas: "header   header    header" "seccion1 seccion1  aside" "seccion2 seccion2  aside" "footer   footer    footer";
+  min-height: 100vh;
+}
+
+.mainContact {
+  display: grid;
+  grid-template-areas: "seccion1 seccion1 seccion1" "seccion2 seccion2 seccion2";
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  padding: 60px;
+}
+
+header {
+  grid-area: header;
+}
+
+#seccion1 {
+  grid-area: seccion1;
+}
+
+#seccion2 {
+  grid-area: seccion2;
+}
+
+.llegar {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  justify-content: center;
+  width: 100%;
+}
+
+.llegar iframe {
+  margin: 0 65px;
+  border-radius: 10px;
+}
+
+#comoLlegar {
+  margin-top: 15px;
+}
+
+.estamos {
+  width: 70%;
+}
+
+.aside {
+  grid-area: aside;
+}
+
+.asideContacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.asideImage {
+  width: 250px;
+  height: 200px;
+  padding: 5px 0px;
+  margin-right: 5px;
+}
+
+footer {
+  grid-area: footer;
+}
+
+/*# sourceMappingURL=style.css.map */
