--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,5 @@
 @import "./pages/index";
 @import "./pages/habitaciones";
 @import "./pages/contacto";
+@import "./pages/tarifas";
+@import "./pages/actividades";
