--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,28 @@
 $colorPrimario: black;
 
-%flex {
+@mixin flex {
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
+}
+
+%titulo {
+    line-height: 1.5em;
+    font-size: 2.5em;
+}
+
+%info {
+    line-height: 1.3em;
+    font-size: 1.3em;
+}
+
+%masInfo {
+    font-weight: 900;
+    text-decoration: none;
+    list-style: none;
+}
+
+%margenes {
+    margin-left: 10px;
+    margin-bottom: 20px;
 }
