--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -13,6 +13,8 @@
     }
     p {
         padding: 5px;
+        text-align: center;
+        margin-bottom: 15px;
     }
 }
 .imagenes {
@@ -21,9 +23,10 @@
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
+    margin-bottom: 25px;
 
     img {
-        height: 450px;
+        height: 650px;
         width: 50%;
         padding: 10px;
         box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -38,7 +41,7 @@
     padding: 15px;
 
     iframe {
-        height: 450px;
+        height: 550px;
         width: 75%;
         box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     }
@@ -61,7 +64,7 @@
     }
     img {
         width: 97%;
-        height: 750px;
+        height: 800px;
         padding-left: 10px;
         padding-right: 10px;
     }
@@ -71,11 +74,18 @@
     flex-wrap: nowrap;
     align-items: center;
     width: 100%;
+    margin-top: 25px;
 
-    p {
+    .descripcionCabaña {
+        display:flex;
         flex-direction: column;
-        width: 50%;
-        padding: 10px;
+
+        p {
+            padding-bottom: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-bottom: 50px;
+        }
     }
     img {
         padding: 10px;
@@ -87,12 +97,18 @@
     display:flex;
     flex-direction: row-reverse;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
-    
-    p {
-        width: 50%;
-        padding: 10px;
+    height: 650px;
+
+    .descripcionCabaña {
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        p {
+            margin: 35px;
+        }
     }
     img {
         padding: 10px;
