--- a/scss/layout/_media_queries.scss
+++ b/scss/layout/_media_queries.scss
@@ -1,8 +1,10 @@
+ 
  /****INDEX TABLET ****/
  @media (max-width: 768px) {
     .imagenes {
         flex-direction: column;
         align-items: center;
+        flex-wrap: wrap;
 
         img {
             height: 400px;
@@ -12,30 +14,43 @@
     .cabaña1 {
         flex-direction: column;
         align-items: center;
+        flex-wrap: wrap;
 
         img {
             height: 400px;
             width: 90%;
         }
-        p {
+        .descripcionCabaña p {
+            text-align: center;
+            padding: 20px;
             width: 90%;
         }
     }
     .cabaña2 {
         flex-direction: column;
         align-items: center;
+        flex-wrap: nowrap;
 
         img {
-            height: 400px;
+            height: auto;
             width: 90%;
         }
-        p {
+        .descripcionCabaña p {
+            text-align: center;
+            padding: 20px;
             width: 90%;
         }
     }
     .Nosotros img {
         object-fit: cover;
     }
+    .enlacesEscritorio {
+        display: none;
+    }
+    .navbar {
+        display: initial;
+    }
+    
 }
 /**** INDEX MOBILE ****/
 @media screen and (max-width: 480px) {
@@ -93,18 +108,20 @@
     .suiteMatrimonial {
         flex-direction: column;
         align-items: center;
-    }
-    .suiteMatrimonial img {
-        height: 450px;
-        width: 85%;
-        border-bottom: 10px solid darkred;
-    }
-    .suiteInfo {
-        padding-left: 60px;
-        padding-bottom: 20px;
-        padding-right: 60px;
-        padding-top: 0px;
-        width: 90%;
+        flex-wrap: nowrap;
+
+        img {
+            height: 450px;
+            width: 85%;
+            border-bottom: 10px solid darkred;
+        }
+        .suiteInfo {
+            padding-left: 60px;
+            padding-bottom: 20px;
+            padding-right: 60px;
+            padding-top: 0px;
+            width: 90%;
+        }
     }
     .servicios {
         flex-direction: column;
@@ -117,19 +134,20 @@
         flex-direction: column;
         align-items: center;
         padding-bottom: 0px;
-    }
-    .suiteMatrimonial img {
-        height: 350px;
-        width: 100%;
-        border-bottom: 10px solid darkred;
-    }
-    .suiteInfo {
-        flex-direction: column;
-        padding-left: 60px;
-        padding-bottom: 60px;
-        padding-right: 60px;
-        padding-top: 0px;
-        width: 90%;
+
+        img {
+            height: 350px;
+            width: 100%;
+            border-bottom: 10px solid darkred;
+        }
+        .suiteInfo {
+            flex-direction: column;
+            padding-left: 60px;
+            padding-bottom: 60px;
+            padding-right: 60px;
+            padding-top: 0px;
+            width: 90%;
+        }
     }
     .NOTA {
         margin-top: 30px;
