--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,11 +27,16 @@
 }
 
 /*** HEADER ***/
+.navbar {
+  display: none;
+}
+
 header {
   background-color: grey;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
+  margin-bottom: 30px;
 }
 header .barraNavegacion {
   display: flex;
@@ -63,10 +68,24 @@ header .enlaces li a:hover {
   color: brown;
 }
 
+.container-fluid {
+  display: flex;
+  background-color: grey;
+  color: antiquewhite;
+}
+.container-fluid a {
+  color: antiquewhite;
+}
+.container-fluid a:hover {
+  color: brown;
+}
+.container-fluid img {
+  width: 100px;
+}
+
 body {
   font-family: "Roboto Slab", serif;
   font-size: 21px;
-  font-weight: lighter;
   text-decoration: none;
   list-style-type: none;
   background-color: rgb(255, 218, 172);
@@ -79,23 +98,31 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 25px 0;
+  padding: 15px 0;
 }
 footer .footer__info {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+footer .footer__info h4 {
+  padding: 5px;
+  margin: 0px;
+}
+footer .footer__info p {
+  text-align: center;
+  padding: 5px;
+  margin: 0px;
+}
 footer .footer__info ul {
   display: flex;
-  align-items: center;
   list-style: none;
-  justify-content: space-evenly;
-  width: 100%;
+  padding: 0px;
   margin: 10px;
 }
 footer .footer__info ul li img {
-  width: 50px;
+  padding: 5px;
+  width: 65px;
 }
 
 .portada {
@@ -175,16 +202,15 @@ footer .footer__info ul li img {
   align-items: center;
   width: 100%;
   margin-top: 25px;
+  margin-bottom: 15px;
 }
 .cabaña1 .descripcionCabaña {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .cabaña1 .descripcionCabaña p {
-  padding-bottom: 60px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-bottom: 50px;
+  padding: 30px;
 }
 .cabaña1 img {
   padding: 10px;
@@ -196,17 +222,17 @@ footer .footer__info ul li img {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  flex-wrap: nowrap;
   width: 100%;
-  height: 650px;
+  margin-bottom: 20px;
 }
 .cabaña2 .descripcionCabaña {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .cabaña2 .descripcionCabaña p {
-  margin: 35px;
+  padding: 30px;
 }
 .cabaña2 img {
   padding: 10px;
@@ -302,34 +328,6 @@ footer .footer__info ul li img {
   font-weight: bolder;
 }
 
-#gridContanto {
-  display: grid;
-  grid-template-columns: auto auto auto; /* Tres columnas igualmente distribuidas */
-  grid-template-areas: "header   header    header" "seccion1 seccion1  aside" "seccion2 seccion2  aside" "footer   footer    footer";
-  min-height: 100vh;
-}
-
-.mainContact {
-  display: grid;
-  grid-template-areas: "seccion1 seccion1 seccion1" "seccion2 seccion2 seccion2";
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  padding: 60px;
-}
-
-header {
-  grid-area: header;
-}
-
-#seccion1 {
-  grid-area: seccion1;
-}
-
-#seccion2 {
-  grid-area: seccion2;
-}
-
 .llegar {
   display: flex;
   align-items: center;
@@ -343,16 +341,8 @@ header {
   border-radius: 10px;
 }
 
-#comoLlegar {
-  margin-top: 15px;
-}
-
 .estamos {
   width: 70%;
-}
-
-.aside {
-  grid-area: aside;
 }
 
 .asideContacto {
@@ -367,10 +357,6 @@ header {
   height: 200px;
   padding: 5px 0px;
   margin-right: 5px;
-}
-
-footer {
-  grid-area: footer;
 }
 
 #tarifasPromos {
@@ -473,6 +459,7 @@ footer {
   .imagenes {
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
   }
   .imagenes img {
     height: 400px;
@@ -481,27 +468,39 @@ footer {
   .cabaña1 {
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
   }
   .cabaña1 img {
     height: 400px;
     width: 90%;
   }
-  .cabaña1 p {
+  .cabaña1 .descripcionCabaña p {
+    text-align: center;
+    padding: 20px;
     width: 90%;
   }
   .cabaña2 {
     flex-direction: column;
     align-items: center;
+    flex-wrap: nowrap;
   }
   .cabaña2 img {
-    height: 400px;
+    height: auto;
     width: 90%;
   }
-  .cabaña2 p {
+  .cabaña2 .descripcionCabaña p {
+    text-align: center;
+    padding: 20px;
     width: 90%;
   }
   .Nosotros img {
     object-fit: cover;
+  }
+  .enlacesEscritorio {
+    display: none;
+  }
+  .navbar {
+    display: initial;
   }
 }
 /**** INDEX MOBILE ****/
@@ -554,13 +553,14 @@ footer {
   .suiteMatrimonial {
     flex-direction: column;
     align-items: center;
+    flex-wrap: nowrap;
   }
   .suiteMatrimonial img {
     height: 450px;
     width: 85%;
     border-bottom: 10px solid darkred;
   }
-  .suiteInfo {
+  .suiteMatrimonial .suiteInfo {
     padding-left: 60px;
     padding-bottom: 20px;
     padding-right: 60px;
@@ -584,7 +584,7 @@ footer {
     width: 100%;
     border-bottom: 10px solid darkred;
   }
-  .suiteInfo {
+  .suiteMatrimonial .suiteInfo {
     flex-direction: column;
     padding-left: 60px;
     padding-bottom: 60px;
