--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,23 +4,33 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 25px 0;
+    padding: 15px 0;
 
     .footer__info {
         display: flex;
         flex-direction: column;
         align-items: center;
 
+        h4 {
+            padding: 5px;
+            margin: 0px;
+        }
+
+        p {
+            text-align: center;
+            padding: 5px;
+            margin: 0px;
+        }
+
         ul {
             display: flex;
-            align-items: center;
             list-style: none;
-            justify-content: space-evenly;
-            width: 100%;
+            padding: 0px;
             margin: 10px;
 
             li img {
-                width: 50px;
+                padding: 5px;
+                width: 65px;
             }
         }
     }
