--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -75,16 +75,15 @@
     align-items: center;
     width: 100%;
     margin-top: 25px;
+    margin-bottom: 15px;
 
     .descripcionCabaña {
         display:flex;
         flex-direction: column;
+        align-items: center;
 
         p {
-            padding-bottom: 60px;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin-bottom: 50px;
+            padding: 30px;
         }
     }
     img {
@@ -97,17 +96,17 @@
     display:flex;
     flex-direction: row-reverse;
     align-items: center;
-    flex-wrap: nowrap;
     width: 100%;
-    height: 650px;
+    margin-bottom: 20px;
 
     .descripcionCabaña {
         display:flex;
         flex-direction: column;
-        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
 
         p {
-            margin: 35px;
+            padding: 30px;
         }
     }
     img {
